[package]
name = "mutex-pool"
version = "0.2.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
crossbeam-utils = "0.8.21"
wyrand = "0.3.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "*", features = ["full"]}

[[bench]]
name = "count_pool"
harness = false
